--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 
 #login-box {
   width: 400px;
-  height: 480px;
+  height: 500px;
   background: rgba(10, 8, 8, 0.961);
   color: #fff;
   top: 50%;
@@ -18,7 +18,10 @@ body {
   transform: translate(-50%, -50%);
   box-sizing: border-box;
   padding: 70px 30px;
+
 }
+
+
 
 #login-box .logo {
   width: 100px;
@@ -56,7 +59,7 @@ body {
   margin-bottom: 20px;
 }
 
-#login-box input[type="text"], #login-box input[type="password"] {
+#login-box input[type="number"], #login-box input[type="password"] {
   border: none;
   border-bottom: 1px solid #fff;
   background: transparent;
@@ -80,4 +83,9 @@ body {
   cursor: pointer;
   background: #ffc107;
   color: #000;
+}
+
+.lin{
+  line-height: 4vh;
+  text-align: center;
 }
