--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,8 @@ body {
   height: 40px;
   color: #fff;
   font-size: 16px;
+  -webkit-appearance: none; 
+ 
 }
 
 #login-box input[type="submit"] {
@@ -81,7 +83,7 @@ body {
 
 #login-box input[type="submit"]:hover {
   cursor: pointer;
-  background: #ffc107;
+  background: #4a72e0;
   color: #000;
 }
 
