--- a/src/assets/css/Add.css
+++ b/src/assets/css/Add.css
@@ -4,9 +4,9 @@ body {
     font-family: sans-serif;
   }
 
-  #menu-box {
-    width: 300px;
-    height: 300px;
+  #add-box{
+    width: 450x;
+    height: 400px;
     background: rgba(10, 8, 8, 0.961);
     color: #fff;
     top: 50%;
@@ -15,25 +15,16 @@ body {
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 70px 30px;
+    text-align: center;
   
   }
-  
-  #menu-box .logo {
-    width: 105px;
-    height: 90px;
-    border-radius: 100%;
-    position: absolute;
-    top: -40px;
-    left: calc(50% - 50px);
-  }
 
-
-  #menu-box button {
+  #add-box input{
     width: 100%;
     margin-bottom: 15px;
   }
 
-  #menu-box button[type="number"], #menu-box button[type="password"] {
+#add-box input[type="text"] {
     border: none;
     border-bottom: 1px solid #fff;
     background: transparent;
@@ -41,11 +32,11 @@ body {
     height: 40px;
     color: #fff;
     font-size: 16px;
+
     
   }
-  
 
-  #menu-box button[type="submit"] {
+  #add-box button[type="submit"] {
     border: none;
     outline: none;
     height: 40px;
@@ -55,14 +46,14 @@ body {
     border-radius: 20px;
   }
 
-  #menu-box button[type="submit"]:hover {
+  #add-box button[type="submit"]:hover {
     cursor: pointer;
     background: #4a72e0;
     color: #000;
   }
 
 
-  #menu-box label {
+  #add-box label {
     margin: 1px;
     padding: 0;
     font-weight: bold;
