--- a/src/assets/css/Add.css
+++ b/src/assets/css/Add.css
@@ -5,7 +5,7 @@ body {
   }
 
   #add-box{
-    width: 450x;
+    width: 450px;
     height: 400px;
     background: rgba(10, 8, 8, 0.961);
     color: #fff;
