--- a/src/assets/css/Add.css
+++ b/src/assets/css/Add.css
@@ -64,18 +64,8 @@ body {
     padding: 0;
     font-weight: bold;
     display: block;
-    font-size:20px;
+    font-size:x-large;
     text-align: center;
     line-height:5vh;
 
-  }
-
-  #add-box h2 {
-    margin: 1px;
-    padding: 0;
-    font-weight: bold;
-    display: block;
-    font-size:40px;
-    text-align: center;
- 
   }
